// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Can render 1`] = `
<button
  class="
        btn-nm
        size-medium
        color-primary
        variant-default
        clicked-false
        
        
        undefined
      "
  type="button"
>
  Hello World
</button>
`;

exports[`Button Component Can render non default variants 1`] = `
Array [
  <button
    class="
        btn-nm
        size-medium
        color-primary
        variant-outlined
        clicked-false
        
        
        undefined
      "
    type="button"
  >
    Hello World
  </button>,
  <button
    class="
        btn-nm
        size-medium
        color-primary
        variant-secondary
        clicked-false
        
        
        undefined
      "
    type="button"
  >
    Hello World
  </button>,
]
`;
